* Version 1.0.27:
 - Have pureftpd_shutdown() shut the server down even if a client is
connected on iPhone.
 - Allow users with no quota to modify .pureftpd-upload-* files.
 - Unbreak ipv6 support, reported by Brad Smith.

* Version 1.0.26:
 - Fix incompatibilities with Cyberduck when TLS is enabled.
 - Don't TLS_accept() immediately after accept(). Reply on the connection
socket first, so that clients don't have to wait before knowing that they
can actually use TLS. It avoids lags with LFTP and hangs with Cyberduck.
 - Properly change the process name on Linux when the -S option is used, by
Margus Kaidja.
 - Unbreak authentication of non-chrooted users. Thanks to Juergen Daubert
for the bug report.

* Version 1.0.25:
 - Show symlinks as symlinks in MLSD, except when the broken client
compatibility mode is turned on and links are not dangling (just like the
old LIST and NLIST commands). Reported by Mime Cuvalo.
 - More gcc 2 compatibility, thanks to Todd Rinaldo.
 - Properly handle custom paths in man pages. Thanks to Scott Haneda and
Mathieu Parisot.
 - Have $localstatedir default to /var as it used to be unless
--localstatedir=... is explicitely passed to ./configure
 - Use @VERSION@ in man pages.
 - --without-pam disables PAM on OSX and iPhone.
 - Allow cross-compilation.
 - Experimental iPhone target.
 - Change the way it links, building a library first.
 - Don't use mmap() any more for downloads. It's too slow.
 - Don't use hard-coded paths in order to find MySQL and PostgreSQL
libraries and header files. Use mysql_config and pg_config instead.
Suggested by John Alberts.
 - Log the DELE command similar to the RETR and STOR commands. Suggested by
Martin Fuxa.
 - The primary group gets cached so that it's always displayed in directory
listings.
 - Avoid a client process to burn CPU in an infinite loop if the command
channel gets disconnected before the data channel. Reported by Thomas Min
and Margus Kaidja.